<resources>
    <string name="app_name">Feirapp</string>
    <string name="search">Buscar</string>
    <string name="new_product">Novo Produto</string>
    <string name="create_list">Criar Lista</string>
    <string name="import_list">Importar Lista</string>
    <string name="title_activity_import_selection">ImportSelection</string>


    <!-- Strings used for fragments for navigation -->
    <string name="qr_code" translatable="false">QR Code</string>
    <string name="csv" translatable="false">CSV</string>
    <string name="code_type">Digitar Código</string>
    <string name="go_back">Voltar</string>
    <string name="search_product">Buscar Produtos</string>
    <string name="hello_blank_fragment">Olá fragmento em branco</string>
    <string name="product_list_label">Lista de Produtos</string>
    <string name="search_product_name">Busca</string>
    <string name="no_text">no text</string>
    <string name="busca_externa">Busca externa?</string>
    <string name="items_per_page">Items Por Página</string>
    <string name="import_list_button_text">IMPORTAR LISTA</string>
    <string name="import_type_screen_title">Selecione o tipo de importação</string>
    <string name="alt_name">Nome alternativo</string>
    <string name="brand_name">Nome da marca</string>
    <string name="item_name">nome do item</string>
    <string name="save">SALVAR</string>
    <string name="test">TESTE</string>
</resources>
