<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_type_screen_title"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/parakeet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_import_select"/>

    <LinearLayout
        android:id="@+id/ll_import_select"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qr_code" />
        <Button
            android:id="@+id/btn_string_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code_type" />
        <Button
            android:id="@+id/btn_csv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/csv" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_back"
        android:backgroundTint="@color/parakeet"
        app:layout_constraintTop_toBottomOf="@id/ll_import_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>
</androidx.constraintlayout.widget.ConstraintLayout>