<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <com.google.android.material.appbar.MaterialToolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        style="@style/Widget.MaterialComponents.Toolbar.Primary"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="@color/white"-->
<!--        app:navigationIconTint="@color/parakeet"-->
<!--        app:navigationIcon="@drawable/ic_back"/>-->

    <TextView
        android:id="@+id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/ll_menu_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/parakeet"
        android:textSize="50sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/ll_menu_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_search_products"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_product" />

        <Button
            android:id="@+id/bt_create_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_product" />

        <Button
            android:id="@+id/bt_create_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_create_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_list" />

        <Button
            android:id="@+id/bt_import_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_create_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_list" />

<!--        <Button-->
<!--            android:id="@+id/bt_google_camera"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/bt_create_list"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Google Camera" />-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>