<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QrcodeScanResultFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="48dp"
        android:padding="16dp"
        android:text="@string/product_list_label"
        android:textColor="@color/parakeet"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/parakeet"
        android:text="store name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/parakeet"
        android:text="store name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_store_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_qrcode_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/rv_qrcode_result" />

    <Button
        android:id="@+id/bt_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_list_button_text"
        app:layout_constraintTop_toBottomOf="@id/rv_qrcode_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>